--- a/Web/Areas/Logistics/Views/Home/Index.cshtml
+++ b/Web/Areas/Logistics/Views/Home/Index.cshtml
@@ -608,11 +608,7 @@
                                 <div class="col-md-3 form-group">
                                     <!--<label class="control-label col-md-8">Enter number of records to view</label>-->
                                     <div class="col-md-12">
-                                        <<<<<<< HEAD
-                                        <input type="text" placeholder="Enter number of records to view" class="form-control" id="takeFirstId" ng-change="onChange(transporterValue)" ng-model="search.transportOrderNo" value="10">
-                                        =======
-                                        <input type="text" placeholder="Enter number of records to view" class="form-control" id="takeFirstId" ng-model="search.transportOrderNo" value="10">
-                                        >>>>>>> local-CATS-1169-release
+                                        <input type="text" placeholder="Enter number of records to view" class="form-control" id="takeFirstId" ng-change="onChange(transporterValue)" ng-model="search.transportOrderNo" value="10">                                      
                                     </div>
                                 </div>
                             </div>
@@ -1169,7 +1165,6 @@
 
                 var onIncommingGrns = function (data) {
                     $scope.IncommingGrns = data;
-
                     $scope.ctrlStatus.loadingIncommingGrns = false;
                 };
 
@@ -1178,6 +1173,7 @@
                     });
 
                 $scope.onChange = function (transporterId) {
+                    $scope.ctrlStatus.loadingIncommingGrns = true;
                     $scope.reqParam.transporterId = transporterId;
                     $scope.reqParam.takeTheFirst = $("#takeFirstId").val();
 
