--- a/Web/Areas/Hub/Views/LossesAndAdjustments/AdjustmentEditPartial.cshtml
+++ b/Web/Areas/Hub/Views/LossesAndAdjustments/AdjustmentEditPartial.cshtml
@@ -20,7 +20,7 @@
                 </div>
                 <div class="actions">
                     <input type="submit" class="btn btn-sm green" value="@Html.Translate("Save")" />
-                    <a href='@Html.Action("CreateAdjustment", "LossesAndAdjustments")' class="btn btn-sm red">@Html.Translate("Cancel")</a>
+                    <a href='/Hub/LossesAndAdjustments' class="btn btn-sm red">@Html.Translate("Cancel")</a>
                     <a class="btn btn-icon-only btn-default fullscreen"></a>
                 </div>
             </div>
