--- a/Web/Views/Shared/_DefaultLayout.cshtml
+++ b/Web/Views/Shared/_DefaultLayout.cshtml
@@ -42,7 +42,8 @@ Like: www.facebook.com/Eng.Biruk.Tilahun
     <meta content="" name="author" />
     <!--   _LAYOUT.CSHTML  -->
     <!-- JAVA SCRIPT -->
-    <script src="~/Content/assetss/global/plugins/jquery.min.js" type="text/javascript"></script>
+    <script src="~/Scripts/jquery-1.9.1.min.js" type="text/javascript"></script>
+    
     <script src="@Url.Content("~/Scripts/HubScripts/jquery-ui-1.8.11.js")" type="text/javascript"></script>
 
     <script src="~/Content/assets/js/bootstrap-transition.js"></script>
@@ -128,9 +129,7 @@ Like: www.facebook.com/Eng.Biruk.Tilahun
     <link href="@Url.Content("~/Content/kendo/2013.1.319/kendo.default.min.css")" rel="stylesheet" type="text/css" />
     @* <link href="@Url.Content("~/Content/kendo/2013.1.319/kendo.bootstrap.min.css")" rel="stylesheet" type="text/css" />*@
 
-    @*<script src="~/Content/assetss/global/plugins/jquery.min.js" type="text/javascript"></script>*@
-    <!-- Fom Cats -->
-    @*<script src="~/Scripts/kendo/2013.1.319/jquery.min.js"></script>*@
+
 
     <script src="@Url.Content("~/Scripts/HubScripts/modernizr-1.7.min.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/HubScripts/DialogForm.js")" type="text/javascript"></script>
