--- a/Web/Areas/Logistics/Views/LocalPurchase/Index.cshtml
+++ b/Web/Areas/Logistics/Views/LocalPurchase/Index.cshtml
@@ -14,19 +14,19 @@
 
 }
 @*@section Toolbar
-{
-    <a data-buttontype="btn_new_record" class="btn toolbar-btn " href="@Url.Action("Create", "LocalPurchase")"></a>
-}*@
+    {
+        <a data-buttontype="btn_new_record" class="btn toolbar-btn " href="@Url.Action("Create", "LocalPurchase")"></a>
+    }*@
 @*@section Styles{
-    <style>
-        .k-window-titlebar{
-            margin-top: -30px;
-            height: 30px;
-        }
-    </style>
-    
-      
-}*@
+        <style>
+            .k-window-titlebar{
+                margin-top: -30px;
+                height: 30px;
+            }
+        </style>
+
+
+    }*@
 <div class="portlet light bordered">
     <div class="portlet-title">
         <div class="caption font-green-sharp">
@@ -39,10 +39,11 @@
                 <a href="javascript:;" class="remove" data-original-title="" title=""></a>
             </div>*@
         <div class="actions">
-            @if (LogisticsConstants.isValidOperation(LogisticsConstants.Operation.Add_new_local_purchase) == "Add_new_local_purchase") {
-            <a class="btn green btn-xs" href="@Url.Action("Create", "LocalPurchase")"><i class="fa fa-plus"></i> @Html.Translate("Create New")</a>
-            <a class="btn btn-circle btn-icon-only btn-default fullscreen" href="javascript:;" data-original-title="" title=""></a>
-                }
+            @if (LogisticsConstants.isValidOperation(LogisticsConstants.Operation.Add_new_local_purchase) == "Add_new_local_purchase")
+            {
+                <a class="btn green btn-xs" href="@Url.Action("Create", "LocalPurchase")"><i class="fa fa-plus"></i> @Html.Translate("Create New")</a>
+                <a class="btn btn-circle btn-icon-only btn-default fullscreen" href="javascript:;" data-original-title="" title=""></a>
+            }
         </div>
     </div>
     <div class="portlet-body">
@@ -51,26 +52,29 @@
               .Name("grid")
               .Columns(columns =>
               {
-              if (LogisticsConstants.isValidOperation(LogisticsConstants.Operation.Local_purchase_link).ToString() == "Local_purchase_link") {
-                  columns.Bound(m => m.SiNumber).Title(Html.Translate("SI Number")).
-              ClientTemplate("<a href='" + Url.Action("Details", "LocalPurchase", new { id = "#=LocalPurchaseID#" }) + " '>#=SiNumber#</a>  ");
-              }
+                  if (LogisticsConstants.isValidOperation(LogisticsConstants.Operation.Local_purchase_link).ToString() == "Local_purchase_link")
+                  {
+                      columns.Bound(m => m.SiNumber).Title(Html.Translate("SI Number")).
+                  ClientTemplate("<a href='" + Url.Action("Details", "LocalPurchase", new { id = "#=LocalPurchaseID#" }) + " '>#=SiNumber#</a>  ");
+                  }
 
-              columns.Bound(m => m.Program).Title(Html.Translate("Program"));
-              columns.Bound(m => m.DonorName).Width(200).Title(Html.Translate("Donor"));
-              columns.Bound(m => m.SupplierName).Width(200).Title(Html.Translate("Supplier Name"));
-              columns.Bound(m => m.Commodity).Width(200).Title(Html.Translate("Commodity"));
-              columns.Bound(m => m.ReferenceNumber).Title(Html.Translate("Reference Number"));
-              columns.Bound(m => m.Quantity).HtmlAttributes(new { align = "right" }).Title(Html.Translate("Quantity"));
-              columns.Bound(m => m.Status).Title(Html.Translate("Status"));
-              if (LogisticsConstants.isValidOperation(LogisticsConstants.Operation.Remove_Local_Purchase).ToString() == "Remove_Local_Purchase")
-              {
-                  columns.Command(m => m.Custom("Revert").Click("OnRevert"));
-              }
+                  columns.Bound(m => m.Program).Title(Html.Translate("Program"));
+                  columns.Bound(m => m.DonorName).Width(200).Title(Html.Translate("Donor"));
+                  columns.Bound(m => m.SupplierName).Width(200).Title(Html.Translate("Supplier Name"));
+                  columns.Bound(m => m.Commodity).Width(200).Title(Html.Translate("Commodity"));
+                  columns.Bound(m => m.ReferenceNumber).Title(Html.Translate("Reference Number"));
+                  columns.Bound(m => m.Quantity).HtmlAttributes(new { align = "right" }).Title(Html.Translate("Quantity"));
+                  columns.Bound(m => m.Status).Title(Html.Translate("Status"));
+
+                  if (LogisticsConstants.isValidOperation(LogisticsConstants.Operation.Remove_Local_Purchase).ToString() == "Remove_Local_Purchase")
+                  {
+                      columns.Command(m => m.Custom("Revert").Click("OnRevert"));
+                  }
                   if (LogisticsConstants.isValidOperation(LogisticsConstants.Operation.Remove_Local_Purchase).ToString() == "Remove_Local_Purchase")
                   {
                       columns.Command(m => m.Custom("Delete").Click("OnDelete"));
                   }
+
                   columns.Command(m => m.Custom("History").Click("OnHistoryClicked"));
               }
 
@@ -80,7 +84,7 @@
               .Scrollable()
 
               .HtmlAttributes(new { style = "height:430px;" })
-              .TableHtmlAttributes(new {@class="table table-condensed"})
+              .TableHtmlAttributes(new { @class = "table table-condensed" })
               .Events(e => e.DataBound("onDataBound"))
               .DataSource(dataSource => dataSource
                                             .Ajax()
@@ -120,14 +124,9 @@
                 var currentRow = grid.table.find("tr[data-uid='" + currentUid + "']");
                 var revertButton = $(currentRow).find(".k-grid-Revert");
                 revertButton.hide();
-
             }
-
-
-
         }
     }
-
 
     function OnDelete(e) {
         e.preventDefault();
@@ -180,12 +179,12 @@
 <div id="modalWindow">
     <div class="alert alert-warning">
         <strong>Warning!</strong> Are You Sure You Want to Delete this Local Purchase?
-    </div><hr/>
+    </div><hr />
     <div class="pull-right">
         <button id="yes" class="btn green">Yes</button>
-        <button id="no" class="btn default">No</button>  
+        <button id="no" class="btn default">No</button>
     </div>
-    
+
 </div>
 <script>
     var wnd;
@@ -203,7 +202,7 @@
 <div id="modalWindowRevert">
     <div class="alert alert-warning">
         <strong>Warning!</strong> Are You Sure You Want to Revert this local Purchase?
-    </div><hr/>
+    </div><hr />
     <div class="pull-right">
         <button id="yesRevert" class="btn green">Yes</button>
         <button id="noRevert" class="btn default">No</button>
@@ -226,6 +225,7 @@
         margin-top: -30px;
         height: 30px;
     }
+
     hr {
         margin: 5px 0;
     }
