--- a/Web/Areas/Hub/Views/StackEvent/EventLog.cshtml
+++ b/Web/Areas/Hub/Views/StackEvent/EventLog.cshtml
@@ -2,23 +2,24 @@
 @model IEnumerable<Cats.Models.Hubs.ViewModels.StackEventLogViewModel>
 
 
-<div style="min-height: 500px; padding-top:20px;">
+<div style="min-height: 800px; padding-top:20px;">
 
     <div style="margin-bottom:20px;">
         <input type="button" value="Add New Event" class="t-button"  id="addNewEvent"/>
     </div>
     @if (Cats.Helpers.UserAccountHelper.HubOperationCheck(HubConstants.Operation.Add_new_event) )
     {
-@{ Html.Telerik().Window()
+ Html.Telerik().Window()
             .Name("AddNewEventWindow")
             .Title("Add new event")
             .LoadContentFrom("EditStackEvent", "StackEvent")
             .Width(400)
+            .Height(500)
             .Draggable(true)
             .Modal(true)
             .Visible(false)
             .Render();
-    }
+
 
 }
 
@@ -32,7 +33,7 @@
                 columns.Bound(o => o.Recommendation);
                 columns.Bound(o => o.FollowUpDate);
             })
-            .DataBinding(dataBinding => 
+            .DataBinding(dataBinding =>
             {
                 dataBinding.Ajax().Select("EventLogGrid", "StackEvent");
             })
@@ -56,7 +57,7 @@
 
         $('#StackNumberTwo').val(stackValue.value());
         $('#StackTwoName').val(stackValue.text());
-        
+
 
         $('#Recommendation').val("");
         $('#Description').val("");
